# LMI_AI_Solutions

./: changelog.txt  conftest.py
anomaly_detectors/: pyproject.toml
anomaly_detectors/anomalib_lmi/: README.md  anomaly_model.py  anomaly_model2.py  base.py
classifiers/: pyproject.toml
classifiers/yolov8_cls/: run_model.py
lmi_utils/: pyproject.toml
lmi_utils/dataset_utils/: mask_encoder.py  representations.py
lmi_utils/image_utils/: img_pad.py  make_collage.py  merge_pred_with_orig.py
lmi_utils/inspection_utils/notebooks/: generate_from_GoFactory_Gocator_scans.ipynb
lmi_utils/label_utils/: augment_hf.py  crop_by_foreground.py  csv_to_json.py  csv_to_yolo.py  json_convert.py  lst_to_csv.py  pad_with_csv.py  pad_with_json.py  plot_labels.py  plot_yolo_labels.py  resize_with_json.py
lmi_utils/lmi_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
object_detectors/: pyproject.toml
object_detectors/core/: od_base.py
object_detectors/detectron2_lmi/: model.py
object_detectors/gofactory/: write_json.py
object_detectors/od_core/: object_detector.py
object_detectors/yolov5_lmi/: model.py  run_model.py
tests/: anomaly_detectors_v0.html  anomaly_detectors_v0_packaged.html  anomaly_detectors_v1.html  anomaly_detectors_v1_packaged.html  docker-compose.yaml  dockerfile  dockerfile.v0  lmi_utils_v0.html  lmi_utils_v0_packaged.html  lmi_utils_v1.html  lmi_utils_v1_packaged.html  object_detectors_v0.html  object_detectors_v0_packaged.html  object_detectors_v1.html  object_detectors_v1_packaged.html  run_packaged_tests.sh  run_tests.sh
(+24 files in other folders)
