[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmi_utils"
version = "0.0.0"
description = "Utility functions and scripts for LMI AI Solutions."
dependencies = [
]

[tool.setuptools]
packages = ["data_utils", "eval_utils", "inspection_utils", "image_utils", "label_utils", "pcl_utils", "system_utils", "postprocess_utils"]